--- a/Linq2DbUpdate/Linq2DbUpdate.csproj
+++ b/Linq2DbUpdate/Linq2DbUpdate.csproj
@@ -9,9 +9,10 @@
     
     <ItemGroup>
         <PackageReference Include="BenchmarkDotNet" Version="0.13.1" />
+<!--        <PackageReference Include="linq2db" Version="2.9.8" />        -->
         <PackageReference Include="linq2db" Version="3.5.0" />
-        
         <PackageReference Include="Microsoft.Data.Sqlite" Version="5.0.11" />
+        <PackageReference Include="MySql.Data" Version="8.0.26" />
     </ItemGroup>
 
 </Project>
